# ModelLearning

./: A-CANN - 2024 - Li et al.ipynb  CANN.py  PathIntegration.ipynb  README.md  agent.py  base.py  cscg.py  evolvCANN.ipynb  evolvCANN_Gen2.ipynb  evolvCANN_simulation_results.pkl  gru_belief.py  gruca3.py  guidance for model development.txt.txt  tem_maze1.pt
DQN4Maze/: analyzer.ipynb  dqn_agent.pkl  evaluate.py  graph.py  log.py  train.py  utils.py  wrappers.py
GRUCA3/: agent.py  analyzer.ipynb
RL/: graph.py  train.py  utils.py
data/: D12_1.pkl  D12_2.pkl  DSP_10212.pkl  DSP_10224.pkl  DSP_10227.pkl  DSP_10232.pkl  Pretrained_10212.pkl  __init__.py  _io.py  graph.py  gruca3_10212.pkl  gruca3_10212_ego.pkl  preprocess.py
obsolete/: CANN for Path Integration - 1997 - Samsonovich.ipynb  CANN-based.py  Continuous Attractor Graph.ipynb  Path Integration.ai
tem/: README.md  __init__.py  pyproject.toml
tem/analysis/: decode.py
tem/envs/: ego.py  graph_world.py  maze_adapter.py
tem/models/: memory.py  tem_lite.py
tem/scripts/: train_demo.py  train_json.py  train_maze1.py
test/: generate_dsp_behavior_for_modeling.ipynb  test.xlsx  test_cscg.ipynb  test_energy_based_model.ipynb  test_gru.ipynb  test_vanilla_rnn.ipynb
