[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tem-torch-rebuilt"
version = "0.1.0"
description = "Minimal PyTorch rebuild of TEM-like model for aliased action-observation sequences"
requires-python = ">=3.9"
dependencies = ["torch>=2.0", "numpy>=1.23", "tqdm>=4.64"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tem_torch_rebuilt*"]
